added swagger for upload file and fixes
